--- a/pages/chat.html
+++ b/pages/chat.html
@@ -4,6 +4,7 @@ title: 留言板
 css: [common.css,header.css,footer.css,totop.css]
 js: [common.js,header.js,totop.js,chat.js]
 ---
+<!--多说-->
 <div id="loadingtip">评论框加载中......</div>
 <div class="ds-thread" data-thread-key="1" data-title="{{ page.title }}" data-url="{{ site.realchaturl }}"></div>
 <script type="text/javascript">
@@ -17,3 +18,13 @@ js: [common.js,header.js,totop.js,chat.js]
 			 || document.getElementsByTagName('body')[0]).appendChild(ds);
 	})();
 </script>
+
+<!--畅言-->
+<div id="SOHUCS" sid="chat" ></div>
+<script type="text/javascript">
+(function(){
+var appid = 'cysUnaz1L';
+var conf = 'prod_734ecc17ae5199b3b74480c5414ab584';
+var width = window.innerWidth || document.documentElement.clientWidth;
+if (width < 960) {
+window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>'); } else { var loadJs=function(d,a){var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;var b=document.createElement("script");b.setAttribute("type","text/javascript");b.setAttribute("charset","UTF-8");b.setAttribute("src",d);if(typeof a==="function"){if(window.attachEvent){b.onreadystatechange=function(){var e=b.readyState;if(e==="loaded"||e==="complete"){b.onreadystatechange=null;a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("http://changyan.sohu.com/upload/changyan.js",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })(); </script>
