删除临时文章

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,55 +3,79 @@ layout: mypost
 title: 关于我
 ---
 
-> Hello，这里是TMaize'Blog......
+<blockquote>
+  <p>Hello，这里是TMaize’Blog……</p>
+</blockquote>
 
-以前学Linux的时候接触了Wordpress，热衷于下载各种炫酷的主题
+<p>以前学Linux的时候接触了Wordpress，热衷于下载各种炫酷的主题</p>
 
-后来又了解到了简洁的Typecho，并用它搭建了我的第一个博客，写了第一个主题
+<p>后来又了解到了简洁的Typecho，并用它搭建了我的第一个博客，写了第一个主题</p>
 
-再后来看到了别人的GitHub Page，发现把博客托管到GitHub这里很省事，遂写了一套jekyll主题(就是现在这个，在一点点完善)，用于记录自己的学习笔记（没有一点技术含量的文章），便于自己查阅
+<p>再后来看到了别人的GitHub Page，发现把博客托管到GitHub这里很省事，遂写了一套jekyll主题(就是现在这个，在一点点完善)，用于记录自己的学习笔记（没有一点技术含量的文章），便于自己查阅</p>
 
-后来没有人知道，唯有Stay hungry, Stay foolish，努力去尝试新事物才能不被这社会淘汰....
+<p>后来没有人知道，唯有Stay hungry, Stay foolish，努力去尝试新事物才能不被这社会淘汰......</p>
 
-就是这样o(≧v≦)o~~
+<p>就是这样o(≧v≦)o~~</p>
 
-## 作品展示
+<h1 id="作品展示">作品展示</h1>
 
-一些练习的小项目就不展示了
+<p>一些练习的小项目就不展示了</p>
 
-+ 酝酿中...
+<ul>
+  <li>酝酿中…</li>
+</ul>
 
-## 相关技能
+<h1 id="相关技能">相关技能</h1>
 
-+ 熟练掌握HTML/CSS，能熟练手写符合W3C标准的代码
+<ul>
+  <li>
+    <p>熟练掌握HTML/CSS，能熟练手写符合W3C标准的代码</p>
+  </li>
+  <li>
+    <p>熟练使用Java，C，Python语言</p>
+  </li>
+  <li>
+    <p>JavaScript掌握基本语法和DOM操作和Ajax操作，会用Vue,jQuery</p>
+  </li>
+  <li>
+    <p>能够写一些Android小程序</p>
+  </li>
+  <li>
+    <p>能熟练使用常见算法，并用于解决问题</p>
+  </li>
+  <li>
+    <p>后端框架Spring，Hibernate，JFinal，Mybatis略有了解</p>
+  </li>
+  <li>
+    <p>数据库方面能熟练使用MySQL</p>
+  </li>
+  <li>
+    <p>Linux的简单使用，各种服务的搭建</p>
+  </li>
+  <li>
+    <p>能够使用Git/SVN对代码版本进行控制</p>
+  </li>
+</ul>
 
-+ 熟练使用Java，C，Python语言
+<h1 id="个人信息">个人信息</h1>
 
-+ JavaScript掌握基本语法和DOM操作和Ajax操作，会用Vue,jQuery
-
-+ 能够写一些Android小程序
-
-+ 能熟练使用常见算法，并用于解决问题
-
-+ 后端框架Spring，Hibernate，JFinal，Mybatis略有了解
-
-+ 数据库方面能熟练使用MySQL
-
-+ Linux的简单使用，各种服务的搭建
-
-+ 能够使用Git/SVN对代码版本进行控制
-
-## 个人信息
-
-+ Resume : [准备中...](/)
-
-+ Birth：1996
-
-+ QQ : 1772314831
-
-+ Email : tmaize@qq.com
-
-+ GitHub : [https://github.com/tmaize](https://github.com/tmaize)
-
-+ OSChina : [https://git.oschina.net/tmaize](https://git.oschina.net/tmaize)
-
+<ul>
+  <li>
+    <p>Resume : <a href="/">准备中…</a></p>
+  </li>
+  <li>
+    <p>Birth：1996</p>
+  </li>
+  <li>
+    <p>QQ : 1772314831</p>
+  </li>
+  <li>
+    <p>Email : tmaize@qq.com</p>
+  </li>
+  <li>
+    <p>GitHub : <a href="https://github.com/tmaize">https://github.com/tmaize</a></p>
+  </li>
+  <li>
+    <p>OSChina : <a href="https://git.oschina.net/tmaize">https://git.oschina.net/tmaize</a></p>
+  </li>
+</ul>
