修改关于我

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@ title: 关于我
 ---
 
 <blockquote>
-  <p>Hello，这里是TMaize’Blog……</p>
+  <p>Hello World，欢迎访问TMaize’Blog……</p>
 </blockquote>
 
 <p>以前学Linux的时候接触了Wordpress，热衷于下载各种炫酷的主题</p>
