重新阻止主题的结构

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: 文章分类
-css: [common.css,header.css,footer.css,totop.css,categories.css,articlelist.css]
-js: [common.js,header.js,totop.js]
+css: [common.css,categories.css,articlelist.css]
+js: [common.js]
 ---
 <!-- categories.css -->
 <div id="listcategories">
