--- a/pages/chat.html
+++ b/pages/chat.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: 留言板
-css: [common.css,header.css,footer.css,totop.css]
-js: [common.js,header.js,totop.js,chat.js]
+css: [common.css]
+js: [common.js,chat.js]
 ---
 <!--逝去的多说..-->
 
