--- a/pages/search.html
+++ b/pages/search.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: 搜索
-css: [common.css,header.css,footer.css,totop.css,search.css]
-js: [common.js,header.js,totop.js,search.js]
+css: [common.css,search.css]
+js: [common.js,search.js]
 ---
 <div id="mysearch">
 	<div id="searchbox">
