--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-css: [common.css,header.css,footer.css,totop.css,articlelist.css]
-js: [common.js,header.js,totop.js]
+css: [common.css,articlelist.css]
+js: [common.js]
 ---
 <div id="articlelist">
 	{% for post in site.posts  %}
