--- a/pages/chat.html
+++ b/pages/chat.html
@@ -2,14 +2,11 @@
 layout: default
 title: 留言板
 css: [common.css]
-js: [common.js,chat.js]
+js: [common.js]
 ---
-<!--逝去的多说..-->
-
-<div id="loadingtip">评论框加载中......</div>
 
 <!--畅言-->
-<div id="SOHUCS" sid="chat" ></div>
+<div id="SOHUCS" sid="chat" >评论框加载中......</div>
 <script type="text/javascript">
 (function(){
 var appid = 'cysUnaz1L';
