修改评论样式

--- a/pages/chat.html
+++ b/pages/chat.html
@@ -118,15 +118,12 @@ js: [common.js,bmob-min.js,chat.js]
     }
 
     .commint-list ul {
+	    margin-top: 12px;
         padding-left: 18px;
     }
 
     .commint-list li {
         margin-bottom: 20px;
-    }
-
-    .commint-list-title {
-        margin-bottom: 10px;
     }
 
     .commint-list-title a {
