允许邮箱为空

--- a/pages/chat.html
+++ b/pages/chat.html
@@ -18,7 +18,7 @@ js: [common.js,bmob-min.js,chat.js]
         <input type="text" class="comment-input">
     </span>
     <span class="comment-email">
-        <p>电子邮件(不会公开)*</p>
+        <p>电子邮件(不会公开)</p>
         <input type="text" class="comment-input">
     </span>
     <span class="comment-website">
