控制评论内容过高

--- a/pages/chat.html
+++ b/pages/chat.html
@@ -137,7 +137,10 @@ js: [common.js,bmob-min.js,chat.js]
     .commint-list-title span {
         float: right;
     }
-
+    .commint-list-content{
+        max-height: 100px;
+        overflow: auto;
+	}
     .commint-list-loadmore {
         margin-top: 25px;
         text-align: center;
