--- a/pages/chat.html
+++ b/pages/chat.html
@@ -1,4 +1,10 @@
---- layout: default title: 留言板 css: [common.css] js: [common.js,bmob-min.js,chat.js] ---
+---
+layout: default
+title: 留言板
+css: [common.css]
+js: [common.js,bmob-min.js,chat.js]
+---
+
 <div class="comment">
     <div class="comment-title">
         <h1>留言板</h1>
