Squashed commit of the following:
commit e3a391f26ff87de6a9e9509757491f0abd67d741
Author: tym <1772314831@qq.com>
Date:   Fri May 18 11:14:11 2018 +0800

    完成评论

commit caf2cf16965e211a9563aea177baba587c327edd
Author: tym <1772314831@qq.com>
Date:   Wed May 16 00:07:00 2018 +0800

    评论功能

commit 16bafd9cd89dca2c2d89c4e581c17da5aa0e1ab6
Author: tym <1772314831@qq.com>
Date:   Tue May 15 22:06:29 2018 +0800

    搜索功能

commit 74e2635f9eda423b738b17f9e3794c6111bcc244
Author: tym <1772314831@qq.com>
Date:   Tue May 15 00:16:31 2018 +0800

    添加原生JS事件

commit 56617eb793d6acb18301d36ac39ce4568498d6ff
Author: tym <1772314831@qq.com>
Date:   Sun May 13 21:49:43 2018 +0800

    留言板

commit 221f61d647c898bc1face2817b7ae39fd05dc57d
Author: tym <1772314831@qq.com>
Date:   Sun May 13 15:22:33 2018 +0800

    调整其余页面

commit a9b10f8285738d982ebb574b95d5a6c367d029a3
Author: tym <1772314831@qq.com>
Date:   Sun May 13 12:47:11 2018 +0800

    文章页面

commit b00f5fb6c99e4df7b9c0625f3fa759da1c2f0fd8
Author: tym <1772314831@qq.com>
Date:   Sun May 13 10:19:51 2018 +0800

    首页

commit b32f811cbc5a048a8cb7e86fa963c12ae1af0129
Author: tym <1772314831@qq.com>
Date:   Fri May 11 10:18:09 2018 +0800

    header修改

commit 58e6942a33a83a6b0ea2c7086c838da543f75562
Author: tym <1772314831@qq.com>
Date:   Thu May 10 14:21:34 2018 +0800

    存档

--- a/_请删除这个文件夹/theme-tmaize-blog/_render/categories.html
+++ b/_请删除这个文件夹/theme-tmaize-blog/_render/categories.html
@@ -1,26 +1,29 @@
 <#assign page_title = "文章分类">
-<#assign css_list = ["common.css","categories.css","articlelist.css"]>
-<#assign js_list = ["common.js"]>
+<#assign css_list = ["blog.css","blog-post.css"]>
+<#assign js_list = ["blog.js"]>
 
 <#include "../_includes/header.html">
 
-<div id="listcategories">
-    <blockquote>标签云</blockquote>
-    <ul>
-    	<#list global.categories as cat>
-			<li><a href="#${cat.name}">${cat.name}</a></li>
+<div class="main animation-fadeUp post">
+	<h1 class="title">文章分类</h1>
+	<div class="content">
+		<#list global.categories as cat>
+			<a href="#${cat.name}">${cat.name}</a>
+			<span>&nbsp;</span>
 		</#list>
-    </ul>
+		<hr>
+	</div>
 </div>
-
-<div id="articlelist">
+<div class="main animation-fadeUp">
 	<#list global.categories as cat>
-		<div class="type-head" name="${cat.name}" id="${cat.name}">${cat.name}</div>
-		<ul>
-			<#list cat.articles as article>
-				<#include "../_includes/article-li.html">
-			</#list>
-		</ul>
+		<div class="list-group">
+			<span id="${cat.name}">${cat.name}</span>
+			<ul>
+				<#list cat.articles as article>
+					<#include "../_includes/article-li.html">
+				</#list>
+			</ul>
+		</div>
 	</#list>
 </div>
 
