--- a/_请删除这个文件夹/theme-tmaize-blog/_render/links.html
+++ b/_请删除这个文件夹/theme-tmaize-blog/_render/links.html
@@ -1,12 +1,12 @@
 <#assign page_title = "友情链接">
-<#assign css_list = ["common.css","syntax.css","mypost.css"]>
-<#assign js_list = ["common.js"]>
+<#assign css_list = ["blog.css","blog-post.css"]>
+<#assign js_list = ["blog.js"]>
 
 <#include "../_includes/header.html">
 
-<div id="mypost">
-	<h1 class="postinfo">友情链接</h1>
-	<div class="main">
+<div class="main animation-fadeUp post">
+	<h1 class="title">友情链接</h1>
+	<div class="content">
 		<ul>
 			<#list global.data['links.json'] as link>
 				<li>
