--- a/_请删除这个文件夹/theme-tmaize-blog/index.html
+++ b/_请删除这个文件夹/theme-tmaize-blog/index.html
@@ -1,9 +1,9 @@
-<#assign css_list = ["common.css","articlelist.css"]>
-<#assign js_list = ["common.js"]>
+<#assign css_list = ["blog.css"]>
+<#assign js_list = ["blog.js"]>
 
 <#include "_includes/header.html">
 
-<div id="articlelist">
+<div class="main animation-fadeUp">
     <#list global.articles as article>
         <#assign this_post_year = article.date?string("yyyy")?number>
         <#if article_index == global.articles?size-1>
@@ -12,32 +12,18 @@
             <#assign next_post_year = global.articles[article_index+1].date?string("yyyy")?number>
         </#if>
         <#if article_index == 0>
-            <div class="type-head">${this_post_year?c}</div>
-                <ul>
+            <div class="list-group"><span>${this_post_year?c}</span><ul>
         </#if>
         <#if this_post_year == next_post_year>
             <#if article_index==global.articles?size-1>
-                    <#include "_includes/article-li.html">
-                </ul>
+                <#include "_includes/article-li.html"></ul></div>
             <#else>
                 <#include "_includes/article-li.html">
             </#if>
         <#else>
-                <#include "_includes/article-li.html">
-            </ul>
-            <div class="type-head">${next_post_year?c}</div>
-            <ul>
+            <#include "_includes/article-li.html"></ul></div><div class="list-group"><span>${next_post_year?c}</span><ul>
         </#if>
     </#list>
 </div>
-
-<!-- 首页的友情链接 -->
-<ul style="display: none;">
-	<#list global.data['links.json'] as link>
-	<li>
-		<a href="${link.url}" title="${link.title}">${link.content}</a>
-	</li>
-	</#list>
-</ul>
 
 <#include "_includes/footer.html">
