--- a/_请删除这个文件夹/theme-tmaize-blog/post.html
+++ b/_请删除这个文件夹/theme-tmaize-blog/post.html
@@ -1,11 +1,13 @@
 <#assign page_title = page.article.title>
 <#assign page_keywords = page.article.categories>
-<#assign css_list = ["common.css","syntax.css","mypost.css"]>
-<#assign js_list = ["common.js"]>
+<#assign css_list = ["blog.css","blog-post.css"]>
+<#assign js_list = ["blog.js"]>
 
 <#include "_includes/header.html">
-<div id="mypost">
-	<h1 class="postinfo">${page.article.title}</h1>
-	<div class="main">${page.article.html}</div>
+
+<div class="main animation-fadeUp post">
+	<h1 class="title">${page.article.title}</h1>
+	<div class="content">${page.article.html}</div>
 </div>
+
 <#include "_includes/footer.html">
