恢复统计代码

--- a/_请删除这个文件夹/theme-tmaize-blog/_render/chat.html
+++ b/_请删除这个文件夹/theme-tmaize-blog/_render/chat.html
@@ -21,7 +21,7 @@
         <div style="clear: both;"></div>
     </div>
     <ul class="comment-list"></ul>
-    <div class="comment-more">加载更多</div>
+    <div class="comment-more hide">加载更多</div>
     <div class="comment-list-templete hide">
         <li class="animation-fadeUp">
             <img class="head" baseUrl="http://www.gravatar.com/avatar/">
