--- a/pages/categories.html
+++ b/pages/categories.html
@@ -1,33 +1,36 @@
 ---
 layout: default
 title: 文章分类
-css: [common.css,categories.css,articlelist.css]
-js: [common.js]
+css: [blog.css,blog-post.css]
+js: [blog.js]
 ---
-<!-- categories.css -->
-<div id="listcategories">
-    <blockquote>标签云</blockquote>
-    <ul>
+<div class="main animation-fadeUp post">
+	<h1 class="title">文章分类</h1>
+	<div class="content">
 		{% for category in site.categories %}
-			<li><a href="#{{ category[0] }}">{{ category[0] }}</a></li>
+		<a href="#{{ category[0] }}">{{ category[0] }}</a>
+		<span>&nbsp;</span>
 		{% endfor %}
-    </ul>
+		<hr>
+	</div>	
 </div>
-<!-- main.css -->
-<div id="articlelist">
+<div class="main animation-fadeUp">
 	{% for category in site.categories %}
-		<div class="type-head" name="{{ category[0] }}" id="{{ category[0] }}">{{ category[0] }}</div>
+	<div class="list-group">
+		<span id="{{ category[0] }}">{{ category[0] }}</span>
 		<ul>
 			{% for post in category[1] %}
-				<li>
-					<time>{{ post.date | date: "%Y/%m/%d" }}&nbsp;</time>
-					<a href="{{ site.context }}{{ post.url}}">{{ post.title }}</a>
-					<span>&nbsp;
+			<li class="info">
+				<span class="time md">{{ post.date | date: "%Y/%m/%d" }}</span>
+				<a href="{{site.context}}{{ post.url }}" class="title">{{ post.title }}</a>
+				<span class="categories md">&nbsp;
 					{% for cat in post.categories %}
-						<a href="#{{ cat }}">{{ cat }}</a>
+					<a href="#{{ cat }}">{{ cat }}</a>
 					{% endfor %}
-				</li>
+				</span>
+			</li>
 			{% endfor %}
 		</ul>
+	</div>
 	{% endfor %}
 </div>
