--- a/pages/chat.html
+++ b/pages/chat.html
@@ -1,187 +1,136 @@
 ---
 layout: default
 title: 留言板
-css: [common.css]
-js: [common.js,bmob-min.js,chat.js]
+css: [blog.css,blog-post.css]
+js: [blog.js,bmob.js,chat.js,md5.js]
 ---
-
-<div class="comment">
-    <div class="comment-title">
-        <h1>留言板</h1>
+<div class="main animation-fadeUp post">
+    <h1 class="title">留言板</h1>
+    <div class="content">
         <p>添加友链，内容交流，都可以在这里留下你的足迹....</p>
     </div>
-    <div class="comment-content">
-        <p>评论内容(300字以内)*</p>
-        <textarea class="comment-input"></textarea>
+</div>
+
+<div class="main animation-fadeUp">
+    <div class="comment-form">
+        <input type="text" placeholder="昵称">
+        <input type="email" placeholder="邮箱">
+        <input type="text" placeholder="站点(http://)">
+        <textarea rows="4" placeholder="请填写你的留言,小于200字"></textarea>
+        <span class="select-none">提交</span>
+        <div style="clear: both;"></div>
     </div>
-    <span class="comment-name">
-        <p>姓名(昵称)*</p>
-        <input type="text" class="comment-input">
-    </span>
-    <span class="comment-email">
-        <p>电子邮件(不会公开)</p>
-        <input type="text" class="comment-input">
-    </span>
-    <span class="comment-website">
-        <p>你的站点(http(s)://开头)</p>
-        <input type="text" class="comment-input">
-    </span>
-    <div class="comment-submit">
-        <input type="button" class="comment-input" value="提交">
-    </div>
-    <div class="comment-list">
-        <h2>所有评论</h2>
-        <ul>
-        </ul>
-        <div class="comment-list-loadmore">
-            <input type="button" class="comment-input" value="加载更多">
-        </div>
+    <ul class="comment-list"></ul>
+    <div class="comment-more hide">加载更多</div>
+    <div class="comment-list-templete hide">
+        <li class="animation-fadeUp">
+            <img class="head" baseUrl="http://www.gravatar.com/avatar/">
+            <a class="name" target="_blank">TMaize</a>
+            <span class="time">Jul 17, 2017</span>
+            <div class="content">评论内容</div>
+        </li>
     </div>
 </div>
 <style>
-    .comment {
-        /*50% 50% 不换行*/
-        font-size: 0;
+    .comment-form{
+        padding: 10px;
+        border: 1px solid #ddd;
     }
 
-    .comment p {
-        padding: 0;
-        margin: 5px 0px;
+    .comment-no-url{
+        text-decoration: none;
+        cursor: default;
     }
 
-    .comment * {
-        -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        -o-box-sizing: border-box;
-        -ms-box-sizing: border-box;
-        box-sizing: border-box;
-        font-family: "Open Sans", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", Arial, Verdana, Tahoma, sans-serif;
-        font-size: 14px;
-        color: #666;
+    .comment-form span{
+        width: 66px;
+        line-height: 28px;
+        float: right;
+        border-radius: 14px;
+        background-color: #ededed;
+        text-align: center;
+        cursor: pointer;
     }
 
-    .comment-input {
+    .comment-form textarea,.comment-form input{
+        font-family: Helvetica, Tahoma, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei";
         margin: 0;
-        padding: 0;
-        text-indent: 0;
         outline: 0;
-        border: none;
-        border: 1px solid #AAA;
+        padding: 0;
+        border: 0;
+        color: #313131;
+    }
+    
+    .comment-form input{
+        border-bottom: 1px dashed #ccc;
         width: 100%;
-        padding: 6px;
+        line-height: 30px;
+        margin-bottom: 10px;
     }
 
-    .comment-title {
-        margin-bottom: 20px;
+    .comment-form input:focus{
+        border-bottom: 1px dashed #444;
     }
 
-    .comment-title h1 {
-        font-size: 18px;
-    }
-
-    .comment-content textarea {
-        height: 80px;
+    .comment-form textarea{
+        width: 100%;
+        line-height: 1.8;
         resize: none;
     }
 
-    .comment-name {
-        display: inline-block;
-        width: 33%;
-    }
-
-    .comment-email {
-        display: inline-block;
-        width: 33%;
-        padding: 0 10px;
-    }
-
-    .comment-website {
-        display: inline-block;
-        width: 33%;
-    }
-
-    .comment-submit {
-        margin-top: 10px;
-    }
-
-    .comment-submit input {
-        border: 0;
-        width: 100px;
-        background-color: #222222;
-        color: #f9f9f9;
-        padding: 5px 10px;
-        cursor: pointer;
-    }
-
-    .comment-list h2 {
-        padding: 20px 0px 10px 0px;
-        border-bottom: 1px solid #666;
-    }
-
-    .comment-list ul {
-        margin-top: 12px;
-        padding: 0;
-        list-style: none;
-    }
-
-    .comment-list li {
-        margin-bottom: 20px;
-        border-left: 3px solid #ccc;
-        padding-left: 10px;
-        animation-duration: 1s;
-	    animation-fill-mode: both;
-	    animation-name: fadeInLeft;
-    }
-
-    .comment-list-title {
-        position: relative;
-    }
-
-    .comment-list-title a {
-        display: inline-block;
-        max-width: 170px;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-    }
-
-    .comment-list-title span {
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-
-    .comment-list-content {
-        max-height: 100px;
-        overflow: auto;
-    }
-
-    .comment-list-loadmore {
-        margin-top: 25px;
-        text-align: center;
-        display: none;
-    }
-
-    .comment-list-loadmore input {
-        width: 80px;
+    .comment-list{
         padding: 0;
         margin: 0;
-        border: 0;
-        background-color: #fff;
-        cursor: pointer;
     }
 
-    @media screen and (max-width: 470px) {
-        .comment-name {
-            width: 100%;
-        }
-        .comment-email {
-            width: 100%;
-            padding: 0;
-        }
-
-        .comment-website {
-            width: 100%;
-        }
+    .comment-list li{
+        display: block;
+        list-style: none;
+        margin-top: 17px;
+        padding: 17px;
+        box-shadow: 0px 0px 3px #ccc;
+    }
+    .comment-list .head{
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
+        vertical-align: middle;
+    }
+    .comment-list .name{
+        display: inline-block;
+        height: 40px;
+        line-height: 40px;
+        color: #5f5f5f;
+        font-size: 13px;
+        margin-left: 14px;
+        max-width: 110px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        vertical-align: middle;
+    }
+    .comment-list .content{
+        word-break: break-all;
+        font-size: 13px;
+        color: #313131;
+        margin-top: 12px;
+    }
+    .comment-list .time{
+        font-size: 12px;
+        float: right;
+        height: 40px;
+        line-height: 40px;
+        color: #b3b3b3;
+    }
+    .comment-more{
+        text-align: center;
+        padding: 0;
+        margin: 0 auto;
+        width: 70px;
+        line-height: 28px;
+        border-radius: 14px;
+        background-color: #ededed;
+        cursor: pointer;
+        font-size: 12px;
+        margin-top: 15px;
     }
 </style>
