--- a/pages/chat.html
+++ b/pages/chat.html
@@ -1,136 +1,29 @@
 ---
-layout: default
+layout: page
 title: 留言板
-css: [blog.css,blog-post.css]
-js: [blog.js,bmob.js,chat.js,md5.js]
+css: [blog.css]
+js: [blog.js, md5.js, bmob.js, chat.js]
 ---
-<div class="main animation-fadeUp post">
-    <h1 class="title">留言板</h1>
-    <div class="content">
-        <p>添加友链，内容交流，都可以在这里留下你的足迹....</p>
-    </div>
+
+<div class="container page-chat">
+  <h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
+  <form>
+    <input type="text" placeholder="昵称" autocomplete="off" />
+    <input type="email" placeholder="邮箱" autocomplete="off" />
+    <input type="text" placeholder="站点(http://)" autocomplete="off" />
+    <textarea rows="4" placeholder="请填写你的留言,小于200字"></textarea>
+    <span class="select-none page-chat-submit">提交</span>
+  </form>
+  <ul class="page-chat-list"></ul>
+  <div class="page-chat-load-container">
+    <span class="page-chat-load select-none">评论拉取中</span>
+  </div>
+  <div class="page-chat-list-templet" style="display:none;">
+    <li>
+      <img class="head" {blank}src="http://www.gravatar.com/avatar/{emailMD5}" />
+      <a class="name name-{hasSite}" target="_blank" href="{site}">{name}</a>
+      <span class="date">{date}</span>
+      <div class="content">{content}</div>
+    </li>
+  </div>
 </div>
-
-<div class="main animation-fadeUp">
-    <div class="comment-form">
-        <input type="text" placeholder="昵称">
-        <input type="email" placeholder="邮箱">
-        <input type="text" placeholder="站点(http://)">
-        <textarea rows="4" placeholder="请填写你的留言,小于200字"></textarea>
-        <span class="select-none">提交</span>
-        <div style="clear: both;"></div>
-    </div>
-    <ul class="comment-list"></ul>
-    <div class="comment-more hide">加载更多</div>
-    <div class="comment-list-templete hide">
-        <li class="animation-fadeUp">
-            <img class="head" baseUrl="http://www.gravatar.com/avatar/">
-            <a class="name" target="_blank">TMaize</a>
-            <span class="time">Jul 17, 2017</span>
-            <div class="content">评论内容</div>
-        </li>
-    </div>
-</div>
-<style>
-    .comment-form{
-        padding: 10px;
-        border: 1px solid #ddd;
-    }
-
-    .comment-no-url{
-        text-decoration: none;
-        cursor: default;
-    }
-
-    .comment-form span{
-        width: 66px;
-        line-height: 28px;
-        float: right;
-        border-radius: 14px;
-        background-color: #ededed;
-        text-align: center;
-        cursor: pointer;
-    }
-
-    .comment-form textarea,.comment-form input{
-        font-family: Helvetica, Tahoma, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei";
-        margin: 0;
-        outline: 0;
-        padding: 0;
-        border: 0;
-        color: #313131;
-    }
-    
-    .comment-form input{
-        border-bottom: 1px dashed #ccc;
-        width: 100%;
-        line-height: 30px;
-        margin-bottom: 10px;
-    }
-
-    .comment-form input:focus{
-        border-bottom: 1px dashed #444;
-    }
-
-    .comment-form textarea{
-        width: 100%;
-        line-height: 1.8;
-        resize: none;
-    }
-
-    .comment-list{
-        padding: 0;
-        margin: 0;
-    }
-
-    .comment-list li{
-        display: block;
-        list-style: none;
-        margin-top: 17px;
-        padding: 17px;
-        box-shadow: 0px 0px 3px #ccc;
-    }
-    .comment-list .head{
-        width: 40px;
-        height: 40px;
-        border-radius: 20px;
-        vertical-align: middle;
-    }
-    .comment-list .name{
-        display: inline-block;
-        height: 40px;
-        line-height: 40px;
-        color: #5f5f5f;
-        font-size: 13px;
-        margin-left: 14px;
-        max-width: 110px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        vertical-align: middle;
-    }
-    .comment-list .content{
-        word-break: break-all;
-        font-size: 13px;
-        color: #313131;
-        margin-top: 12px;
-    }
-    .comment-list .time{
-        font-size: 12px;
-        float: right;
-        height: 40px;
-        line-height: 40px;
-        color: #b3b3b3;
-    }
-    .comment-more{
-        text-align: center;
-        padding: 0;
-        margin: 0 auto;
-        width: 70px;
-        line-height: 28px;
-        border-radius: 14px;
-        background-color: #ededed;
-        cursor: pointer;
-        font-size: 12px;
-        margin-top: 15px;
-    }
-</style>
