--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: page
+isPage: true
 title: 首页
 css: [blog.css]
-js: [blog.js]
+js: [blog.js,plugin.js]
 ---
 <div class="container page-index">
 	{% for post in site.posts  %}
