--- a/pages/categories.html
+++ b/pages/categories.html
@@ -1,8 +1,9 @@
 ---
 layout: page
+isPage: true
 title: 文章分类
 css: [blog.css]
-js: [blog.js]
+js: [blog.js,plugin.js]
 ---
 <div class="container page-categories">
 	<h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
