--- a/pages/search.html
+++ b/pages/search.html
@@ -1,8 +1,9 @@
 ---
 layout: page
+isPage: true
 title: 搜索
 css: [blog.css]
-js: [blog.js,search.js]
+js: [blog.js,search.js,plugin.js]
 ---
 <div class="container page-search">
 	<h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
