--- a/pages/search.html
+++ b/pages/search.html
@@ -9,7 +9,7 @@ js: [blog.js,search.js,plugin.js]
 	<h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
 	<input id="search-input" type="text" placeholder="小技巧：空格分隔多个关键字^_^"></input>
 	<div class="list-group">
-		<h2 id="搜素结果">搜素结果</h2>
+		<h2 id="搜索结果">搜索结果</h2>
 		<ul>
 			{% for post in site.posts  %}
 			<li class="search-item" style="display:none;">
