--- a/pages/categories.html
+++ b/pages/categories.html
@@ -5,7 +5,7 @@ title: 文章分类
 css: [blog.css]
 js: [blog.js,plugin.js]
 ---
-<div class="container page-categories">
+<div class="container page-categories animation-fade-up">
 	<h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
 	<ul>
 		{% for category in site.categories %}
