--- a/pages/chat.html
+++ b/pages/chat.html
@@ -6,7 +6,7 @@ css: [blog.css]
 js: [blog.js, md5.js, bmob.js, chat.js,plugin.js]
 ---
 
-<div class="container page-chat">
+<div class="container page-chat animation-fade-up">
   <h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
   <form>
     <input type="text" placeholder="昵称" autocomplete="off" />
