--- a/pages/search.html
+++ b/pages/search.html
@@ -5,7 +5,7 @@ title: 搜索
 css: [blog.css]
 js: [blog.js,search.js,plugin.js]
 ---
-<div class="container page-search">
+<div class="container page-search animation-fade-up">
 	<h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
 	<input id="search-input" type="text" placeholder="小技巧：空格分隔多个关键字^_^"></input>
 	<div class="list-group">
