Squashed commit of the following:
commit 34f546d5f489f61177f5b2b10cc6c1e635f665f2
Author: tym <1772314831@qq.com>
Date:   Mon Jan 21 23:34:16 2019 +0800

    sitemap

commit e69a5a2217c92a7a3c34d2c5435b7b53de703683
Author: tym <1772314831@qq.com>
Date:   Mon Jan 21 22:59:32 2019 +0800

    样式优化

commit c37055fde9b23b6ab84531f98aaa428bd3977c99
Author: tym <1772314831@qq.com>
Date:   Sun Jan 6 18:09:10 2019 +0800

    自适应

commit 6136e4f7322776646f15bc47331140bddbfb29d0
Author: tym <1772314831@qq.com>
Date:   Sun Jan 6 00:32:37 2019 +0800

    功能重写

commit 437c96ee37310888799cfa0cfb71ee9b3e9d58ab
Author: tym <1772314831@qq.com>
Date:   Sat Jan 5 23:00:12 2019 +0800

    调整分类

commit 95408b0d8286004d064be528d33fe5ed5c834290
Author: tym <1772314831@qq.com>
Date:   Sat Jan 5 22:43:58 2019 +0800

    post

commit 519f4a8e2479a6da70a75f49e5e9b230f1c9c21a
Author: tym <1772314831@qq.com>
Date:   Thu Jan 3 23:46:13 2019 +0800

    page

commit 4213986916cdcf8807695e3e14317c80334b1fb8
Author: tym <1772314831@qq.com>
Date:   Thu Jan 3 00:04:14 2019 +0800

    优化

--- a/pages/search.html
+++ b/pages/search.html
@@ -1,48 +1,26 @@
 ---
-layout: default
+layout: page
+isPage: true
 title: 搜索
-css: [blog.css,blog-post.css]
-js: [blog.js,search.js]
+css: [blog.css]
+js: [blog.js,search.js,plugin.js]
 ---
-<div class="main animation-fadeUp post">
-	<h1 class="title">搜索</h1>
-</div>
-<div class="main animation-fadeUp">
+<div class="container page-search animation-fade-up">
+	<h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
 	<input id="search-input" type="text" placeholder="小技巧：空格分隔多个关键字^_^"></input>
-	<div>
-		<div class="list-group">
-			<ul id="search-list"></ul>
-		</div>
+	<div class="list-group">
+		<h2 id="搜索结果">搜索结果</h2>
+		<ul>
+			{% for post in site.posts  %}
+			<li class="search-item" style="display:none;">
+				<span class="date">{{ post.date | date: "%Y/%m/%d" }}</span>
+				<a href="{{site.baseUrl}}{{ post.url }}" class="title hover-underline">{{ post.title }}</a>
+				{% for categorie in post.categories %}
+				<a href="{{site.baseUrl}}/pages/categories.html#{{ categorie }}" class="categorie hover-underline">{{ categorie }}</a>
+				{% endfor %}
+			</li>
+			{% endfor %}
+		</ul>
 	</div>
-	<div id="search-templete" class="hide">
-		<li class="info animation-fadeUp">
-			<span class="time">日期</span>
-			<a class="title">标题</a>
-			<span class="categories">
-				<a baseUrl="${global.config.context}/pages/categories.html#">分类名</a>
-			</span>
-		</li>
-	</div>
-	<style>
-		#search-input{
-			font-family: Helvetica, Tahoma, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei";
-			color: #313131;
-			display: block;
-			outline: 0;
-			width: 100%;
-			text-align: center;
-			margin: 0 0 30px 0;
-			padding: 0 0 10px 0;
-			border: 0;			
-			border-bottom: 2px solid #eee;
-		}
-		@media screen and (max-width: 600px){
-			#search-list {
-				padding-left: 10px;
-				margin-top: 10px;
-				margin-bottom: 10px;
-			}
-		}
-	</style>
 </div>
 
