--- a/pages/chat.html
+++ b/pages/chat.html
@@ -22,8 +22,10 @@ js: [blog.js, md5.js, Bmob-1.6.6.min.js, chat.js,plugin.js]
   <li class="page-chat-list-templet" hidden>
     <div class="info">
       <img class="head" src="http://www.gravatar.com/avatar/"/>
-      <a class="name" target="_blank" href="http://blog.tmaize.net">TMaize</a>
-      <div class="date"><span>2019-06-30</span></div>
+      <a class="name" target="_blank" href="http://blog.tmaize.net">
+        <span>TMaize</span>
+      </a>
+      <div class="date">2019-06-30</div>
     </div>
     <div class="content">Hello World!</div>
   </li>
