--- a/pages/search.html
+++ b/pages/search.html
@@ -7,7 +7,7 @@ js: [blog.js,search.js,plugin.js]
 ---
 <div class="container page-search animation-fade-up">
 	<h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
-	<input id="search-input" type="text" placeholder="小技巧：空格分隔多个关键字^_^"></input>
+	<input id="search-input" type="text" placeholder="请在这里输入关键词^_^"></input>
 	<ul class="search-list">
 		{% for post in site.posts  %}
 		<li hidden>
